[package]
name = "tf2-types"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "a collection of types for tf2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.132", optional = true }

[lib]
name = "tf2types"
crate-type = ["lib"]

[features]
events = []
cevents = ["dep:libc"]

[package.metadata.docs.rs]
all-features = true